--- a/assets/styles.css
+++ b/assets/styles.css
@@ -99,7 +99,15 @@
 .button:hover{
     background-color: rgb(0,70,139);
 }
+.slider-widget{
+    display: grid;
+    grid-template-columns: 20px auto;
+}
 
+.text-widget{
+    display: grid;
+    grid-template-columns: auto auto;
+}
 
 .dashboard-output{
     grid-area: output;
