--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,12 +1,12 @@
 #layout{
     background-color: rgb(0,0,63);
-    height: 200vh;
+    height: auto;
     width: 100vw;
     color: rgb(80, 80, 215);
     font-family: monospace;
     display: grid;
-    grid-template-columns: 1vw 49vw 49vw 1vw;
-    grid-template-rows: 1vh 99vh  99vh 1vh;
+    grid-template-columns: 1vw auto auto 1vw;
+    grid-template-rows: 1vh auto  auto 1vh;
     grid-template-areas:    '.  header  header  .'
                             '.  loader  loader     .'
                             '.  viz       viz       .'
@@ -16,12 +16,13 @@
     column-gap: 10px;
 }
 .dashboard {
-    background-color: rgb(0,0,88);
-    max-height: 95vh;
+    background-color: l*rgb(0,0,88);
+    height: auto;
     display: grid;
-    grid-template-columns: 1vh 1fr 1vh;
-    grid-template-rows:  1vh 1fr 1fr 1vh;
+    grid-template-columns: 1vw 1fr 1vw;
+    grid-template-rows:  1vh auto auto 1vh;
     row-gap: 1vh;
+    column-gap: 1vw;
     grid-template-areas:    '.    .         .'
                             '.    ctrl      .'
                             '.    output    .'
@@ -33,6 +34,11 @@
 
 #loader {
     grid-area: loader;
+    grid-template-columns:  1vw     1fr    1fr    1vw;
+    grid-template-rows:     1vh 1fr 1vh;
+    grid-template-areas:    '...... ...... ...... ......'
+                            '...... ctrl   output ......'
+                            '...... ...... ...... ......';
 }
 
 #visualizer {
@@ -42,7 +48,7 @@
 .control-pannel{
     grid-area: ctrl;
     background-color: rgb(0,0,114);
-    height: 44vh;
+    height: auto;
     display: grid;
     grid-template-columns: 1vh repeat(4, 1fr) 1vh;
     grid-template-rows: 1vh repeat(2, 1fr) 1vh;
@@ -81,6 +87,7 @@
 .control-pannel >:nth-child(8){
     grid-area: w8;
 }
+
 
 .widget{
     background-color: darkblue;
@@ -159,12 +166,16 @@
     grid-area: output;
     background-color: darkblue;
     display: grid;
-    height: 44vh;
+    min-height: 20vh;
     grid-template-columns: 1vh 1fr 1vh;
     grid-template-rows: 1vh 1fr 1vh;
 }
 .dashboard-output:hover{
     background-color: rgb(0,70,139);
+}
+
+#visualizer_output{
+    min-height: 95vh;
 }
 
 #data_table{
